# advent-of-code-2024

./: .gitignore  Aoc2024.cabal  CHANGELOG.md  LICENSE  Readme.md
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  DayTemplate.hs  DayTypes.hs
